--- a/BImobile/index.html
+++ b/BImobile/index.html
@@ -5,7 +5,6 @@
 
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
 	<title>Document</title>
-	<!-- <link href="https://cdn.bootcss.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"> -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-select.min.css">
 	<link rel="stylesheet" href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css">
@@ -13,10 +12,7 @@
 	<link rel="stylesheet" href="css/bootstrap-reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<style>
-	    .panel {
-			border-radius :0px !important;
-		}
-
+	  
 	   .progress{
 		    background:#fff;
 	   }
@@ -25,51 +21,59 @@
 </head>
 <body class="boxed-page" style="background-color: #EFF3F8;overflow-x:hidden;">
 
-	<div style="background-color: #fff;margin-bottom: 20px;">
-		<div class="header" style="padding-top: 15px;">
-			<div class="row container">
-				<div class="col-xs-12" style="text-align: center;">
-				    <a href="javascript:;" id="nav_menu"><i class="fa fa-bars fa-2x" style="color: #CED6DB;float: left;" ></i></a>
-					<span style="font-size: 23px;">看板</span>
+	<div id="top_header" style="background-color: #fff;margin-bottom: 20px;">
+		<!-- <div id="filter"> -->
+			<div class="header" style="padding-top: 15px;">
+				<div class="row container">
+					<div class="col-xs-12" style="text-align: center;">
+					    <a href="javascript:;" id="nav_menu"><i class="fa fa-bars fa-2x" style="color: #CED6DB;float: left;" ></i></a>
+						<span class="header_title">看板</span>
+					</div>
+				</div>
+				<div class="spilt-line"></div>	
+			</div>
+
+			<div id="top_header">
+			
+				<div class="container row" style="text-align: center;border-bottom:1px solid #E6E6E6 ">
+					<div class="col-xs-6">
+						 <select name="frequent"
+								class="bs-select form-control input-small btn-circle"
+								data-style="btn-circle btn-sm　btn-white">
+								<option title="<b>频次：</b>月度" value="mth">月度</option>
+								<option title="<b>频次：</b>周度" value="wk">周度</option>
+						</select> 
+					</div>
+					<div class="col-xs-6">
+						<select name="period"
+								class="bs-select form-control input-small btn-circle"
+								data-style="btn-circle btn-sm　btn-white" data-size="8">   
+								<option title="<b>日期：</b>2017-03" value="mth">2017-03</option>
+						</select>
+					</div>
+					
+					
 				</div>
 			</div>
-			<div class="spilt-line"></div>	
-		</div>
+		<!-- </div>  -->
+	</div>
 
-		<div id="mask" class="mask"></div>
+	<div id="mask" class="mask"></div>
 		<div class="left_menu">
 			<a href="javascript:;"><div class="first-menu active-menu">市场评估和销售预警</div></a>
 			<ul>
 				<a href="index.html"><li><span class="part-center"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;看板</li></a>
-				<a href="javascript:;"><li><span class="part-center"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;市场评估</li></a>
+				<a href="market_eval.html"><li><span class="part-center"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;市场评估</li></a>
 				<a href="forecast.html"><li><span class="part-center"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i>&nbsp;销售预测</li></a>
 			</ul>
 
 			<a href="javascript:;"><div class="first-menu">车型网络健康度</div></a>
 			<ul>
-				<a href="javascript:;"><li><span class="part-center"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;看板</li></a>
+				<a href="dashboard.html"><li><span class="part-center"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;看板</li></a>
 				<a href="javascript:;"><li><span class="part-center"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp;竞品格局</li></a>
 				<a href="javascript:;"><li><span class="part-center"><i class="fa fa-filter" aria-hidden="true"></i>&nbsp;销售漏斗分析</li></a>
 			</ul>
 		</div>
-
-		<div id="top_header">
-			<div id="filter">
-				<div class="container" style="text-align: center;padding-bottom: 10px;border-bottom:1px solid #E6E6E6 ">
-					 <select name="frequent"
-							class="bs-select form-control input-small btn-circle"
-							data-style="btn-circle btn-sm　btn-white" style="margin-right: 40px;">
-							<option title="<b>频次：</b>月度" value="mth">频次:月度</option>
-							<option title="<b>频次：</b>周度" value="wk">周度</option>
-					</select> 
-					<select name="period"
-							class="bs-select form-control input-small btn-circle"
-							data-style="btn-circle btn-sm　btn-white" data-size="8">   
-					</select>
-				</div>
-			</div>
-		</div> 
-	</div>
 	
 	<div class="row center">
 		<div class="col-xs-12">
@@ -416,14 +420,20 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/bootstrap-select.min.js"></script>
+	<script src="js/components-bootstrap-select.min.js"></script>
 	<script src="js/bootstrap-progressbar.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/jquery.sticky.js"></script>
 
 	<script>
 		$(function() {
 			$('.progress .progress-bar').progressbar();
 
 		
+			$("#filter").sticky({
+				topSpacing : 0,
+				zIndex : 999
+			});
 		});
 	</script>
 
